--- a/chatbox_directrices_ecopetrol_final.html
+++ b/chatbox_directrices_ecopetrol_final.html
@@ -1,24 +1,19 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <html><head><meta charset="utf-8"/><title>Chatbox Directrices</title><style>
 body {
-  background-image: url('https://ecopetrol.sharepoint.com/sites/DirectricesExogena/Documentos%20compartidos/fondo_ecopetrol.jpg');
+margin: 0;
+    padding: 40px; /* ✅ Esto agrega espacio alrededor del contenido */
+    box-sizing: border-box;
+    background-image: url('https://ecopetrol.sharepoint.com/sites/DirectricesExogena/Documentos%20compartidos/fondo_ecopetrol.jpg');
+ 
   background-size: cover;
+
+  
   background-repeat: no-repeat;
+
+  
   background-position: center;
+
+  
 }
 
 body {
