--- a/chatbox_directrices_ecopetrol_final.html
+++ b/chatbox_directrices_ecopetrol_final.html
@@ -1,6 +1,6 @@
 <html><head><meta charset="utf-8"/><title>Chatbox Directrices</title><style>
 body {
-margin: 0;
+margin: 30px;
     padding: 80px; /* ✅ Esto agrega espacio alrededor del contenido */
     box-sizing: border-box;
     background-image: url('https://ecopetrol.sharepoint.com/sites/DirectricesExogena/Documentos%20compartidos/fondo_ecopetrol.jpg');
